--- a/lab-regex_in_python.ipynb
+++ b/lab-regex_in_python.ipynb
@@ -30,23 +30,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid email\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
     "# Example input\n",
     "email = \"example@example.com\"\n",
     "\n",
-    "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "# Regex pattern for validating email\n",
+    "pattern = r\"^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$\"\n",
     "\n",
     "# Test the regex\n",
     "if re.match(pattern, email):\n",
     "    print(\"Valid email\")\n",
     "else:\n",
-    "    print(\"Invalid email\")"
+    "    print(\"Invalid email\")\n"
    ]
   },
   {
@@ -59,23 +67,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid phone number\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
     "# Example input\n",
     "phone_number = \"(123) 456-7890\"\n",
     "\n",
-    "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "# Regex pattern for US phone numbers\n",
+    "pattern = r\"^\\(?\\d{3}\\)?[-.\\s]?\\d{3}[-.\\s]?\\d{4}$\"\n",
     "\n",
     "# Test the regex\n",
     "if re.match(pattern, phone_number):\n",
     "    print(\"Valid phone number\")\n",
     "else:\n",
-    "    print(\"Invalid phone number\")"
+    "    print(\"Invalid phone number\")\n"
    ]
   },
   {
@@ -88,21 +104,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2024-12-25']\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
     "# Example input\n",
     "text = \"The event is scheduled for 2024-12-25.\"\n",
     "\n",
-    "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "# Regex pattern for dates in YYYY-MM-DD format\n",
+    "pattern = r\"\\b\\d{4}-\\d{2}-\\d{2}\\b\"\n",
     "\n",
     "# Find all matches\n",
     "dates = re.findall(pattern, text)\n",
-    "print(dates)"
+    "print(dates)\n"
    ]
   },
   {
@@ -115,23 +139,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid URL\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
     "# Example input\n",
     "url = \"https://www.example.com\"\n",
     "\n",
-    "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "# Regex pattern for URLs\n",
+    "pattern = r\"^(https?:\\/\\/)?(www\\.)?[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}(/.*)?$\"\n",
     "\n",
     "# Test the regex\n",
     "if re.match(pattern, url):\n",
     "    print(\"Valid URL\")\n",
     "else:\n",
-    "    print(\"Invalid URL\")"
+    "    print(\"Invalid URL\")\n"
    ]
   },
   {
@@ -144,21 +176,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 'quick', 'brown', 'fox', 'jumps', 'over', 'a', 'lazy', 'dog']\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
     "# Example input\n",
     "text = \"A quick brown fox jumps over a lazy dog.\"\n",
     "\n",
-    "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "# Regex pattern to match all words\n",
+    "pattern = r\"\\b\\w+\\b\"\n",
     "\n",
     "# Find all matches\n",
     "words = re.findall(pattern, text)\n",
-    "print(words)"
+    "print(words)\n"
    ]
   },
   {
@@ -171,23 +211,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid hex color code\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
     "# Example input\n",
     "color_code = \"#FFFFFF\"\n",
     "\n",
-    "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "# Regex pattern for hex color codes\n",
+    "pattern = r\"^#([A-Fa-f0-9]{6}|[A-Fa-f0-9]{3})$\"\n",
     "\n",
     "# Test the regex\n",
     "if re.match(pattern, color_code):\n",
     "    print(\"Valid hex color code\")\n",
     "else:\n",
-    "    print(\"Invalid hex color code\")"
+    "    print(\"Invalid hex color code\")\n"
    ]
   },
   {
@@ -200,23 +248,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid password\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
     "# Example input\n",
     "password = \"Password123!\"\n",
     "\n",
-    "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "# Regex pattern for strong password\n",
+    "pattern = r\"^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d)(?=.*[@$!%*?&])[A-Za-z\\d@$!%*?&]{8,}$\"\n",
     "\n",
     "# Test the regex\n",
     "if re.match(pattern, password):\n",
     "    print(\"Valid password\")\n",
     "else:\n",
-    "    print(\"Invalid password\")"
+    "    print(\"Invalid password\")\n"
    ]
   },
   {
@@ -229,21 +285,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is an example.\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
     "# Example input\n",
     "text = \"This   is   an   example.\"\n",
     "\n",
-    "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "# Regex pattern to match one or more spaces\n",
+    "pattern = r\"\\s+\"\n",
     "\n",
-    "# Replace extra spaces\n",
-    "cleaned_text = re.sub(pattern, \"\", text)\n",
-    "print(cleaned_text)"
+    "# Replace extra spaces with a single space\n",
+    "cleaned_text = re.sub(pattern, \" \", text)\n",
+    "print(cleaned_text)\n"
    ]
   },
   {
@@ -256,23 +320,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid IP address\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
     "# Example input\n",
     "ip_address = \"192.168.1.1\"\n",
     "\n",
-    "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "# Regex pattern for IPv4 addresses\n",
+    "pattern = r\"^((25[0-5]|2[0-4]\\d|1\\d{2}|[1-9]?\\d)\\.){3}(25[0-5]|2[0-4]\\d|1\\d{2}|[1-9]?\\d)$\"\n",
     "\n",
     "# Test the regex\n",
     "if re.match(pattern, ip_address):\n",
     "    print(\"Valid IP address\")\n",
     "else:\n",
-    "    print(\"Invalid IP address\")"
+    "    print(\"Invalid IP address\")\n"
    ]
   },
   {
@@ -285,21 +357,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['#Python', '#Regex', '#Coding']\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
     "# Example input\n",
     "text = \"Here are some hashtags: #Python #Regex #Coding.\"\n",
     "\n",
-    "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "# Regex pattern to match hashtags\n",
+    "pattern = r\"#\\w+\"\n",
     "\n",
     "# Find all matches\n",
     "hashtags = re.findall(pattern, text)\n",
-    "print(hashtags)"
+    "print(hashtags)\n"
    ]
   },
   {
@@ -466,7 +546,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -480,7 +560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
